--- a/style.css
+++ b/style.css
@@ -9,3 +9,138 @@ Version: 1.0.0
 Tags: Nathalie Mota, photographie, catalogue photo, lightbox
 Text Domain: Motaphoto
 */
+
+/* Intégration des Fonts */
+
+/*  regular 400 : SpaceMono regular*/
+
+@font-face {
+  font-family: "SpaceMono";
+  src: url("assets/fonts/SpaceMono-Regular.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
+}
+/*  italic 400 : SpaceMono-Italic */
+
+@font-face {
+  font-family: "SpaceMono";
+  src: url("assets/fonts/SpaceMono-Italic.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: italic;
+  font-weight: 400;
+}
+/* bold 700 : SpaceMono-Bold*/
+
+@font-face {
+  font-family: "SpaceMono";
+  src: url("assets/fonts/SpaceMono-Bold.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 700;
+}
+/* bold italic 700 : SpaceMono-BoldItalic*/
+
+@font-face {
+  font-family: "SpaceMono";
+  src: url("assets/fonts/SpaceMono-BoldItalic.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: italic;
+  font-weight: 700;
+}
+/*  light 300 : Poppins-Light*/
+
+@font-face {
+  font-family: "Poppins";
+  src: url("assets/fonts/Poppins-Light.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 300;
+}
+/*  LightItalic 300 : Poppins-LightItalic*/
+
+@font-face {
+  font-family: "Poppins";
+  src: url("assets/fonts/Poppins-LightItalic.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: italic;
+  font-weight: 300;
+}
+/*  regular 400 : Poppins-Regular*/
+
+@font-face {
+  font-family: "Poppins";
+  src: url("assets/fonts/Poppins-Regular.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
+}
+/*  Italic 400 : Poppins-Italic*/
+
+@font-face {
+  font-family: "Poppins";
+  src: url("assets/fonts/Poppins-Italic.woff2 ") format("woff2");
+  font-display: swap;
+  font-style: italic;
+  font-weight: 400;
+}
+
+/* Body */
+
+h1 {
+  font-family: "SpaceMono";
+  color: #e00000;
+}
+
+/***************HEADER***********/
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+nav {
+  margin-right: 100px;
+}
+
+.logo {
+  margin-left: 100px;
+}
+.logo img {
+  max-width: 250px;
+  height: auto;
+}
+
+/***************MENU***********/
+.menu {
+  display: flex;
+  gap: 50px;
+}
+.menu li {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu a {
+  color: #000000;
+  text-decoration: none;
+  font-family: "SpaceMono", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+}
+.menu a:hover {
+  font-weight: 700;
+}
+
+/***************FOOTER***********/
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px #000000 solid;
+  width: 100%;
+}
