--- a/style.css
+++ b/style.css
@@ -144,3 +144,112 @@ footer {
   border-top: 1px #000000 solid;
   width: 100%;
 }
+
+/***************MODALE***********/
+
+.modale {
+  display: none;
+}
+.modale-block {
+  display: block;
+}
+
+#contact-overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 95px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+}
+
+.contact-popup {
+  width: 596px;
+  min-height: 770px;
+  max-height: 950px;
+  border: 5px #000000 solid;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 45%;
+  right: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+.contact-popup img {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 150%;
+}
+
+.contact-form {
+  width: 260px;
+}
+
+.wpcf7 {
+  margin-top: 30px;
+}
+.wpcf7 label {
+  font-size: 0.72rem;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+}
+.wpcf7-form-control {
+  border-radius: 8px;
+  border: 1px #c4c4c4 solid;
+  height: 36px;
+  width: 100%;
+  margin-top: 4px;
+  margin-bottom: 8px;
+}
+.wpcf7-textarea {
+  height: 210px;
+  margin-bottom: 4px;
+  resize: none;
+}
+.wpcf7-submit {
+  background: #c4c4c4;
+  color: #000000;
+  padding: 15px 0;
+  height: 50px;
+  font-size: 0.72rem;
+  font-family: "SpaceMono", sans-serif;
+  border-radius: 3px;
+  border: 0;
+  transition: 0.3s ease-in-out;
+  width: 100%;
+}
+.wpcf7-submit:hover {
+  background: #000000;
+  color: #ffffff;
+}
+.wpcf7-not-valid-tip {
+  color: #fe5858;
+  position: absolute;
+  bottom: 34px;
+  left: 90px;
+  text-transform: lowercase;
+}
+.wpcf7-response-output {
+  border-radius: 25px;
+  background-color: #ffd6d6;
+  border-color: #ffd6d6 !important;
+  position: absolute;
+  bottom: 90px;
+  left: 440px;
+  width: 110px;
+  font-size: 0.72rem;
+  font-family: "Poppins", sans-serif;
+  animation: 3s ease-in-out;
+}
+
+.popup-message .wpcf7-not-valid-tip {
+  bottom: 225px;
+} /*# sourceMappingURL=style.css.map */
